--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Created by https://www.gitignore.io/api/osx,node,windows,visualstudiocode
 
+### Application ###
+# Ignore mp3
+**/*.mp3
+
 ### Node ###
 # Logs
 logs
